# matrix

./: .gitignore  README.md  pyproject.toml
src/: matrix_create.py  matrix_transp.csv  matrix_transp.py  test.py
