[tool.poetry]
name = "matrix"
version = "0.1.0"
description = ""
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
